046/k8s/2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express
  namespace: staging
  labels:
    app: express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
      - name: express
        image: 424432388155.dkr.ecr.us-east-1.amazonaws.com/express:v0.1.0
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 300m
