046/k8s/3-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: express
  namespace: staging
spec:
  selector:
    app: express
  ports:
    - protocol: TCP
      port: 8080
